--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="msapplication-TileColor" content="#c9a401" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="title" content="Tipiṭaka (CSCD)" />
-    <meta name="description" content="Tipiṭaka (CSCD)" />
+    <meta name="description" content="Chattha Sangayana CD Tipitaka Web Application" />
     <meta name="keywords" content="tipiṭaka, pāḷi, canon, scripture" />
     <meta name="application-name" content="Tipiṭaka (CSCD)" />
     <meta name="image" content="./assets/png/splashscreen.png" />
